k8s/mongo-stateful-set.yaml
#SERVICE- MONGO
apiVersion: v1
kind: Service
metadata:
  name: mongo-db
  labels:
    app: mongo-db
spec:
  type: ClusterIP
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo-db
---
#StatefulSet
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
spec:
  serviceName: "mongo-db"
  replicas: 1
  selector:
    matchLabels:
      app: mongo-db    
  template:
    metadata:
      labels:
        app: mongo-db
    spec:
      containers:
        - name: mongo-db
          command:
            - "mongod"
            - "--bind_ip"
            - "0.0.0.0"
            - "--port"
            - "27017"
            - "--dbpath"
            - "/data/mongoaz"
          image: "mongo:latest"
          ports:
            - containerPort: 27017
              name: mongo
          volumeMounts:
            -
              mountPath: /data/mongoaz
              name: mongo-db-persistent-storage
      restartPolicy: Always
      securityContext:
        fsGroup: 1234
      volumes:
        -
          name: mongo-db-persistent-storage
          persistentVolumeClaim:
            claimName: azurefile
          secret:
            secretName: azure-secret
