k8s/node-api-deployment.yaml
#DEPLOYMENT - NODE API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-api
  labels:
    app: node-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-api
  template:
    metadata:
      labels:
        app: node-api
    spec:
      containers:
      - name: node-api
        image: #{acr-name-lowercase}#.azurecr.io/#{repository_name}#:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3001
        volumeMounts:
          - name: azure-document-file-share
            mountPath: /mnt/azure-document
      volumes:
        - name: azure-document-file-share
          azureFile:
            shareName: #{file-share-name-doc}#
            secretName: azure-secret
            readOnly: false

---
#SERVICE- NODE API
apiVersion: v1
kind: Service
metadata:
  name: node-api
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    app: node-api
