k8s/ingress.yaml
#INGRESS
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-api
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    certmanager.k8s.io/cluster-issuer: cluster-issuer
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
  - hosts:
    - node-api.16781f0b56724d758b7a.eastus.aksapp.io
    secretName: ccertification-app-tls
  rules:
  - host: node-api.16781f0b56724d758b7a.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: node-api
            port: 
              number: 3001
  - host: dev-node-api.16781f0b56724d758b7a.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dev-node-api-external
            port:
              number: 3001
  - host: staging-node-api.16781f0b56724d758b7a.eastus.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: staging-node-api-external
            port:
              number: 3001
---
#DEV
kind: Service
apiVersion: v1
metadata:
  name: dev-node-api-external
  namespace: default
spec:
  type: ExternalName
  externalName: dev-node-api.dev.svc.cluster.local
  ports:
  - port: 3001
---
#STAGING
kind: Service
apiVersion: v1
metadata:
  name: staging-node-api-external
  namespace: default
spec:
  type: ExternalName
  externalName: staging-node-api.staging.svc.cluster.local
  ports:
  - port: 3001
